syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message AwsSshInstanceSyncPerpetualTaskParams {
  string region = 1;
  bytes filter = 2;
  bytes awsConfig = 3;
  bytes encryptedData = 4;
}